--- a/style.css
+++ b/style.css
@@ -375,3 +375,151 @@ hr.color {
 }
 
 /* tablet view media query */
+@media only screen and (min-width:481px) and (max-width:768px) {
+    .header {
+        margin-bottom: 130px;
+    }
+
+    .top-banner {
+
+        border-radius: 18px;
+        background-color: rgba(22, 22, 22, 1);
+        display: grid;
+        grid-template-columns: repeat(2 1fr);
+
+    }
+
+    .head {
+        display: flex;
+        border-radius: 2px solid;
+        width: 100%;
+
+    }
+
+    /*.......... written part
+     on header section
+     ........ */
+
+    .written-part {
+        width: 40%;
+        color: rgba(255, 255, 255, 1);
+        margin: auto;
+        font-size: 0.8em;
+
+
+
+    }
+
+    /* picture part */
+    .pic {
+        width: 40%;
+        padding-right: 5%;
+        padding-top: 2%;
+    }
+
+    .pic img {
+        width: 100%;
+
+    }
+
+    button {
+        background-color: red;
+        border-radius: 5px;
+        font-size: 15px;
+        font-weight: 400px;
+        color: #fff;
+    }
+
+    .button p {
+        padding-bottom: 20PX;
+
+    }
+
+    button:hover {
+        background-color: #fff;
+        color: rgb(237, 177, 12);
+    }
+
+    .fa-circle-play:hover {
+        background-color: rgb(230, 14, 14);
+    }
+
+    .tmge {
+        display: flex;
+    }
+
+    .tmge img {
+        height: 8px;
+        color: #fff;
+    }
+
+    .tmg h6 {
+        font-weight: 100;
+    }
+
+    .tmge>h6,
+    img {
+        display: flex;
+        padding-bottom: 20px;
+
+    }
+
+    .container {
+
+        margin-top: 10%;
+        display: grid;
+        grid-gap: 1rem;
+        height: 100vh;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-row: repeat(2, 1fr);
+        grid-template-areas: "sidebar sidebar"
+            "box1 box2"
+            "box3 box4"
+            "box5 box6"
+            "box7 box8"
+
+            "footer footer"
+    }
+
+    .sidebar>h6 {
+        display: flex;
+    }
+
+    .box9 {
+        display: none;
+    }
+
+    .box1 {
+        grid-area: box1;
+
+    }
+
+    .box2 {
+        grid-area: box2;
+    }
+
+    .box3 {
+        grid-area: box3;
+    }
+
+    .box4 {
+        grid-area: box4;
+    }
+
+    .box5 {
+        grid-area: box5;
+    }
+
+    .box6 {
+        grid-area: box6;
+    }
+
+    .box7 {
+        grid-area: box7;
+    }
+
+    .box8 {
+        grid-area: box8;
+    }
+
+}
